--- a/src/app/modules/specialfeature/StudentActivity/studentactivity.component.scss
+++ b/src/app/modules/specialfeature/StudentActivity/studentactivity.component.scss
@@ -14,7 +14,7 @@ mat-form-field {
 {
     flex:1 0 40px;
 }
-.mat-column-Secured,
+.mat-column-RankId,
 .mat-column-Active,
 .mat-column-Action{
     flex:1 0 100px;
